[package]
name = "exchange"
version = "0.1.0"
authors = ["creator1372 <27164429+creator1372@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.114", features = ["derive"] }

[target."cfg(windows)".dependencies]
cc = "1"
winreg = "0.6"

[target."cfg(windows)".dependencies.winapi]
version = "0.3"
features = [
    "combaseapi",
    "errhandlingapi",
    "fileapi",
    "handleapi",
    "ioapiset",
    "jobapi",
    "jobapi2",
    "minwindef",
    "processthreadsapi",
    "psapi",
    "shlobj",
    "shtypes",
    "synchapi",
    "sysinfoapi",
    "tlhelp32",
    "userenv",
    "winbase",
    "winerror",
    "winioctl",
    "winnt",
    "winuser",
]